--- a/cipherts/styles/covert_action.scss
+++ b/cipherts/styles/covert_action.scss
@@ -115,6 +115,7 @@ a:hover {
     font-size: 0.8em;
     text-align: center;
     width: 1em;
+    padding-right: 4px;
 }
 
 .cipher_dict_count {
@@ -167,6 +168,7 @@ span#msg_id>a:hover {
 
 #cipher_message {
     padding: 1em;
+    display: table;
 }
 
 div.cipher_msg_row {
@@ -180,17 +182,20 @@ div.cipher_msg_letter_row {
     vertical-align: bottom;
     line-height: 0.8em;
     border-collapse: separate;
+    display: table-row;
 }
 
 div.cipher_msg_subst_row {
     text-align: center;
     color: $color_cipher_text_variant;
     vertical-align: top;
+    display: table-row;
 }
 
 span.cipher_msg_subst, span.cipher_msg_letter {
     white-space: pre;
     display: table-cell;
+    table-layout: fixed;
     min-width: 15px;
     text-align: center;
 }
@@ -207,27 +212,138 @@ span.cipher_msg_subst, span.cipher_msg_letter {
 /*#endregion cipher*/
 
 /*#region "misc ui elements"*/
-#command_bar {
-    position: fixed;
-    background-color: #001100;
-    width: 100%;
+#footer {
+    background-color: black;
+    color: indianred;
     padding: 2px;
+    font-size: 0.9em;
+    height: 20px;    
+    width: 100%;
     text-align: center;
     bottom: 0px;
+    vertical-align: middle;    
+}
+
+#tabcontrol {
+    position: absolute;
+    z-index: 100;
+    bottom: 0px;
+    min-width: 60%;
+    max-width: 100%;
     left: 50%;
+    background-color: black;
     @include transform(translateX(-50%));
 }
 
-#footer {
-    text-align: center;    
-    margin: auto;
-    padding-top: 8px;
-    width: 80%;
-    color: $color_cipher_text;
-    font-family: sans-serif;
-    font-size: 0.6em;
+#footer ul {
+    list-style: none;
+    display: inline;
+    padding: 0px;
 }
 
+#footer li {
+    display: inline;
+    padding: 0px 8px;
+    cursor: pointer;
+    border-left: 1px indianred solid;
+}
+
+#footer li:first-of-type {
+    border-left: none;
+}
+
+#footer li:hover {
+    background-color: indianred;
+    color: black;
+}
+
+#footer li.selected {
+    background-color: indianred;
+    color: black;
+}
+
+#footer li#deselect_tab {
+    background-color: indianred;
+    color: black;
+    visibility: hidden;
+}
+
+#footer li#deselect_tab:hover {
+    font-weight: bold;
+}
+
+#footer img {
+    vertical-align: text-bottom;
+}
+
+div.content::-webkit-scrollbar {
+    width: 16px;
+} 
+div.content::-webkit-scrollbar-track {
+    border-left: 1px solid indianred;
+    border-radius: 4px;
+} 
+div.content::-webkit-scrollbar-thumb {
+    background-color: indianred;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 0 6px indianred;
+}
+
+.cell.setting {
+    white-space: nowrap;
+    padding-right: 16px;
+}
+
+div#tab_contents div.content {
+    max-height: 60%;
+    max-height: 60vh;
+    overflow-y: auto;
+    width: 100%;
+    padding: 8px;
+    color: #ccc;
+    font-size: 0.9em;
+    border: indianred 2px solid;
+    border-radius: 4px;
+    background-color: $color_background;
+
+    :first-child {
+        margin-top: 0px;
+    }    
+    :last-child {
+        margin-bottom: 0px;
+    }
+    img {
+        height: 1em;
+        vertical-align: middle;
+    }
+    a {
+        text-decoration: none;
+        color: indianred;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+
+    label {
+        color: indianred;
+    }
+
+    input[type="radio"] + label {
+        cursor: pointer;
+    }
+
+
+    a:visited {
+        color: indianred;
+        text-decoration: underline;
+    }
+}
+
+
+
+.center {
+    text-align: center;
+}
 
 form {
     display: inline;
