--- a/cipherts/styles/covert_action.scss
+++ b/cipherts/styles/covert_action.scss
@@ -284,7 +284,7 @@ div.content::-webkit-scrollbar-track {
     border-radius: 4px;
 } 
 div.content::-webkit-scrollbar-thumb {
-    background-color: indianred;
+    background-color: #723535;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 0 6px indianred;
 }
@@ -482,3 +482,13 @@ div#try_another>a:hover {
 
 /*#endregion "game"*/
 
+form.settings_form button {
+    border: 2px solid indianred;
+    background-color: #723535;
+}
+
+.expandable_head {
+    margin-top: 1em;
+    margin-bottom: 8px;
+    font-size: 1.2em;
+}
